--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/supercar/">Суперкары</a></li>
-                            <li><a class="dropdown-item" href="/race car/">Гоночные автомобили</a></li>
+                            <li><a class="dropdown-item" href="/race/">Гоночные автомобили</a></li>
                             <li><a class="dropdown-item" href="/prot/">Прототипы и исследования дизайна</a></li>
                             <li><a class="dropdown-item" href="/grand/">Grand-Prix и F1 купе</a></li>
                             <li><a class="dropdown-item" href="/coupe/">2 местное купе</a></li>
