--- a/templates/race.html
+++ b/templates/race.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Supercar
+    Prototypes
 {% endblock %}
 
 {% block content %}
@@ -71,7 +71,7 @@
 
 <div class="container mt-4">
     <div class="row">
-        {% for model, data in supercars.items() %}
+        {% for model, data in prot.items() %}
         <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
             <div class="card">
                 <img src="{{ data[0] }}" class="card-img-top" alt="{{ model }}">
